--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                 <h1 class="mail-1">mail@travaltribe.in</h1>
             </div>
             <div class="input-size">
-                <form action="" class="map-form">
+                <form action="https://api.web3forms.com/submit" method="POST" class="map-form">
+                    <input type="hidden" name="access_key" value="7e3f0568-e602-4a43-98a9-8b1c01daf484">
                     <h1>Book Your Dream Vacay Today!</h1>
                     <input type="text" placeholder="Name*">
                     <input type="text" placeholder="City of Residance*">
