--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
                 <form action="https://api.web3forms.com/submit" method="POST" class="map-form">
                     <input type="hidden" name="access_key" value="7e3f0568-e602-4a43-98a9-8b1c01daf484">
                     <h1>Book Your Dream Vacay Today!</h1>
-                    <input type="text" placeholder="Name*">
-                    <input type="text" placeholder="City of Residance*">
-                    <input type="text" placeholder="Email*">
+                    <input type="text" placeholder="Name*" name="Name">
+                    <input type="text" placeholder="City of Residance*" name="City">
+                    <input type="text" placeholder="Email*" name="Email">
                     <div class="map-form-ph">
                         <img src="./images/Flag_of_India.png" alt="">
-                        <input type="text" placeholder="Whatsapp">
+                        <input type="text" placeholder="Whatsapp" name="Phone">
                     </div>
-                    <input type="text" placeholder="Traval Destination*">
-                    <input type="text" placeholder="Date of Traval*">
-                    <input type="text" placeholder="Number of people*">
-                    <input type="text" placeholder="Vacation Type*">
+                    <input type="text" placeholder="Traval Destination*" name="Dst">
+                    <input type="text" placeholder="Date of Traval*" name="Date">
+                    <input type="text" placeholder="Number of people*" name="Number">
+                    <input type="text" placeholder="Vacation Type*" name="Type">
                     <button class="submit-button">Submit</button>
                 </form>
             </div>
